<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_ing_steps"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.baking.mm.bakingapp.RecipeDetails">

    <RelativeLayout
        android:id="@+id/frame_layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_recipe_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:onClick="onClickIngredients"
            android:padding="20dp"
            android:textSize="20sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerview_recipes_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recipe_ingredients"></android.support.v7.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/pb_loading_indicator"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </RelativeLayout>
</android.support.v4.widget.NestedScrollView>